lnb06-trabalhocompiladores/y.output
Terminais não utilizados na gramática

   ABRECH
   FECHACH


Gramática

    0 $accept: programa $end

    1 $@1: /* vazio */

    2 programa: PROGRAM identificador $@1 ABREPAR listaidentificadores FECHAPAR PTOVIRG bloco PONTO

    3 listaidentificadores: identificador
    4                     | listaidentificadores VIRGULA identificador

    5 $@2: /* vazio */

    6 $@3: /* vazio */

    7 bloco: p_declaracaorotulos $@2 p_declaracaovariaveis $@3 p_declaracaosubrotinas comandocomposto

    8 p_declaracaorotulos: /* vazio */
    9                    | LABEL listanumeros PTOVIRG

   10 listanumeros: numero
   11             | listanumeros VIRGULA numero

   12 p_declaracaovariaveis: /* vazio */
   13                      | VAR declaracaovariaveis PTOVIRG
   14                      | declaracaovariaveis PTOVIRG

   15 declaracaovariaveis: listaidentificadores DOISPTS tipo
   16                    | declaracaovariaveis PTOVIRG listaidentificadores DOISPTS tipo

   17 tipo: INTEGER

   18 p_declaracaosubrotinas: /* vazio */
   19                       | listadeclaracaosubrotinas PTOVIRG

   20 listadeclaracaosubrotinas: listadeclaracaosubrotinas PTOVIRG declaracaosubrotinas
   21                          | declaracaosubrotinas

   22 declaracaosubrotinas: declaracaoproc
   23                     | declaracaofuncao

   24 $@4: /* vazio */

   25 $@5: /* vazio */

   26 declaracaoproc: PROCEDURE $@4 identificador $@5 parametrosformais PTOVIRG bloco

   27 $@6: /* vazio */

   28 $@7: /* vazio */

   29 $@8: /* vazio */

   30 declaracaofuncao: FUNCTION $@6 identificador $@7 parametrosformais DOISPTS tipo $@8 PTOVIRG bloco

   31 parametrosformais: /* vazio */

   32 $@9: /* vazio */

   33 $@10: /* vazio */

   34 parametrosformais: ABREPAR $@9 s_parametrosformais $@10 FECHAPAR

   35 $@11: /* vazio */

   36 $@12: /* vazio */

   37 s_parametrosformais: VAR $@11 listaidentificadores $@12 DOISPTS tipo

   38 $@13: /* vazio */

   39 $@14: /* vazio */

   40 s_parametrosformais: $@13 listaidentificadores $@14 DOISPTS tipo

   41 $@15: /* vazio */

   42 $@16: /* vazio */

   43 s_parametrosformais: s_parametrosformais PTOVIRG VAR $@15 listaidentificadores $@16 DOISPTS tipo

   44 $@17: /* vazio */

   45 $@18: /* vazio */

   46 s_parametrosformais: s_parametrosformais PTOVIRG $@17 listaidentificadores $@18 DOISPTS tipo

   47 comandocomposto: _BEGIN END

   48 $@19: /* vazio */

   49 comandocomposto: _BEGIN $@19 listacomandos END

   50 listacomandos: comando
   51              | listacomandos PTOVIRG comando

   52 comando: numero DOISPTS comandosemrotulo
   53        | comandosemrotulo

   54 comandosemrotulo: atribuicao
   55                 | chamadaprocedimento
   56                 | desvio
   57                 | read
   58                 | write
   59                 | comandocomposto
   60                 | comandocondicional
   61                 | comandorepetitivo

   62 $@20: /* vazio */

   63 atribuicao: variavel $@20 ATRIBUICAO expressao

   64 chamadaprocedimento: identificador

   65 $@21: /* vazio */

   66 $@22: /* vazio */

   67 chamadaprocedimento: identificador $@21 ABREPAR listaexpressoes $@22 FECHAPAR

   68 $@23: /* vazio */

   69 read: $@23 READ ABREPAR listaexpressoes FECHAPAR

   70 $@24: /* vazio */

   71 write: $@24 WRITE ABREPAR listaexpressoes FECHAPAR

   72 desvio: GOTO numero

   73 $@25: /* vazio */

   74 $@26: /* vazio */

   75 comandocondicional: IF $@25 expressao $@26 THEN comandosemrotulo condicaoelse

   76 $@27: /* vazio */

   77 condicaoelse: ELSE $@27 comandosemrotulo
   78             | /* vazio */

   79 $@28: /* vazio */

   80 $@29: /* vazio */

   81 comandorepetitivo: WHILE $@28 expressao $@29 DO comandosemrotulo

   82 listaexpressoes: expressao
   83                | listaexpressoes VIRGULA expressao

   84 expressao: expressaosimples
   85          | expressaosimples relacao expressaosimples

   86 expressaosimples: termo
   87                 | MAIS termo
   88                 | MENOS termo
   89                 | termo listaexpressoessimples
   90                 | MAIS termo listaexpressoessimples
   91                 | MENOS termo listaexpressoessimples

   92 listaexpressoessimples: MAIS termo
   93                       | MENOS termo
   94                       | OR termo
   95                       | listaexpressoessimples MAIS termo
   96                       | listaexpressoessimples MENOS termo
   97                       | listaexpressoessimples OR termo

   98 termo: fator
   99      | fator listatermos

  100 listatermos: MULT fator
  101            | DIV fator
  102            | AND fator
  103            | listatermos MULT fator
  104            | listatermos DIV fator
  105            | listatermos AND fator

  106 fator: variavel
  107      | numero
  108      | chamadafuncao
  109      | ABREPAR expressao FECHAPAR
  110      | NOT fator

  111 relacao: IGUAL
  112        | DIF
  113        | MENORIG
  114        | MAIORIG
  115        | MENOR
  116        | MAIOR

  117 variavel: identificador

  118 $@30: /* vazio */

  119 $@31: /* vazio */

  120 chamadafuncao: identificador $@30 ABREPAR listaexpressoes $@31 FECHAPAR

  121 numero: INTEIRO

  122 identificador: IDENT


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
INTEIRO (258) 121
IDENT (259) 122
LABEL (260) 9
VAR (261) 13 37 43
INTEGER (262) 17
IF (263) 75
THEN (264) 75
ELSE (265) 77
WHILE (266) 81
GOTO (267) 72
DO (268) 81
READ (269) 69
WRITE (270) 71
FUNCTION (271) 30
PROCEDURE (272) 26
PROGRAM (273) 2
_BEGIN (274) 47 49
END (275) 47 49
AND (276) 102 105
OR (277) 94 97
NOT (278) 110
MAIORIG (279) 114
MENORIG (280) 113
MAIOR (281) 116
MENOR (282) 115
IGUAL (283) 111
ATRIBUICAO (284) 63
MAIS (285) 87 90 92 95
MENOS (286) 88 91 93 96
MULT (287) 100 103
DIV (288) 101 104
DIF (289) 112
ABREPAR (290) 2 34 67 69 71 109 120
FECHAPAR (291) 2 34 67 69 71 109 120
ABRECH (292)
FECHACH (293)
PTOVIRG (294) 2 9 13 14 16 19 20 26 30 43 46 51
DOISPTS (295) 15 16 30 37 40 43 46 52
VIRGULA (296) 4 11 83
PONTO (297) 2
LOWER_THEN_ELSE (298)


Não-terminais com as regras onde eles aparecem

$accept (44)
    à esquerda: 0
programa (45)
    à esquerda: 2, à direita: 0
$@1 (46)
    à esquerda: 1, à direita: 2
listaidentificadores (47)
    à esquerda: 3 4, à direita: 2 4 15 16 37 40 43 46
bloco (48)
    à esquerda: 7, à direita: 2 26 30
$@2 (49)
    à esquerda: 5, à direita: 7
$@3 (50)
    à esquerda: 6, à direita: 7
p_declaracaorotulos (51)
    à esquerda: 8 9, à direita: 7
listanumeros (52)
    à esquerda: 10 11, à direita: 9 11
p_declaracaovariaveis (53)
    à esquerda: 12 13 14, à direita: 7
declaracaovariaveis (54)
    à esquerda: 15 16, à direita: 13 14 16
tipo (55)
    à esquerda: 17, à direita: 15 16 30 37 40 43 46
p_declaracaosubrotinas (56)
    à esquerda: 18 19, à direita: 7
listadeclaracaosubrotinas (57)
    à esquerda: 20 21, à direita: 19 20
declaracaosubrotinas (58)
    à esquerda: 22 23, à direita: 20 21
declaracaoproc (59)
    à esquerda: 26, à direita: 22
$@4 (60)
    à esquerda: 24, à direita: 26
$@5 (61)
    à esquerda: 25, à direita: 26
declaracaofuncao (62)
    à esquerda: 30, à direita: 23
$@6 (63)
    à esquerda: 27, à direita: 30
$@7 (64)
    à esquerda: 28, à direita: 30
$@8 (65)
    à esquerda: 29, à direita: 30
parametrosformais (66)
    à esquerda: 31 34, à direita: 26 30
$@9 (67)
    à esquerda: 32, à direita: 34
$@10 (68)
    à esquerda: 33, à direita: 34
s_parametrosformais (69)
    à esquerda: 37 40 43 46, à direita: 34 43 46
$@11 (70)
    à esquerda: 35, à direita: 37
$@12 (71)
    à esquerda: 36, à direita: 37
$@13 (72)
    à esquerda: 38, à direita: 40
$@14 (73)
    à esquerda: 39, à direita: 40
$@15 (74)
    à esquerda: 41, à direita: 43
$@16 (75)
    à esquerda: 42, à direita: 43
$@17 (76)
    à esquerda: 44, à direita: 46
$@18 (77)
    à esquerda: 45, à direita: 46
comandocomposto (78)
    à esquerda: 47 49, à direita: 7 59
$@19 (79)
    à esquerda: 48, à direita: 49
listacomandos (80)
    à esquerda: 50 51, à direita: 49 51
comando (81)
    à esquerda: 52 53, à direita: 50 51
comandosemrotulo (82)
    à esquerda: 54 55 56 57 58 59 60 61, à direita: 52 53 75 77 81
atribuicao (83)
    à esquerda: 63, à direita: 54
$@20 (84)
    à esquerda: 62, à direita: 63
chamadaprocedimento (85)
    à esquerda: 64 67, à direita: 55
$@21 (86)
    à esquerda: 65, à direita: 67
$@22 (87)
    à esquerda: 66, à direita: 67
read (88)
    à esquerda: 69, à direita: 57
$@23 (89)
    à esquerda: 68, à direita: 69
write (90)
    à esquerda: 71, à direita: 58
$@24 (91)
    à esquerda: 70, à direita: 71
desvio (92)
    à esquerda: 72, à direita: 56
comandocondicional (93)
    à esquerda: 75, à direita: 60
$@25 (94)
    à esquerda: 73, à direita: 75
$@26 (95)
    à esquerda: 74, à direita: 75
condicaoelse (96)
    à esquerda: 77 78, à direita: 75
$@27 (97)
    à esquerda: 76, à direita: 77
comandorepetitivo (98)
    à esquerda: 81, à direita: 61
$@28 (99)
    à esquerda: 79, à direita: 81
$@29 (100)
    à esquerda: 80, à direita: 81
listaexpressoes (101)
    à esquerda: 82 83, à direita: 67 69 71 83 120
expressao (102)
    à esquerda: 84 85, à direita: 63 75 81 82 83 109
expressaosimples (103)
    à esquerda: 86 87 88 89 90 91, à direita: 84 85
listaexpressoessimples (104)
    à esquerda: 92 93 94 95 96 97, à direita: 89 90 91 95 96 97
termo (105)
    à esquerda: 98 99, à direita: 86 87 88 89 90 91 92 93 94 95 96
    97
listatermos (106)
    à esquerda: 100 101 102 103 104 105, à direita: 99 103 104 105
fator (107)
    à esquerda: 106 107 108 109 110, à direita: 98 99 100 101 102
    103 104 105 110
relacao (108)
    à esquerda: 111 112 113 114 115 116, à direita: 85
variavel (109)
    à esquerda: 117, à direita: 63 106
chamadafuncao (110)
    à esquerda: 120, à direita: 108
$@30 (111)
    à esquerda: 118, à direita: 120
$@31 (112)
    à esquerda: 119, à direita: 120
numero (113)
    à esquerda: 121, à direita: 10 11 52 72 107
identificador (114)
    à esquerda: 122, à direita: 2 3 4 26 30 64 67 117 120


estado 0

    0 $accept: . programa $end

    PROGRAM  deslocar, e ir ao estado 1

    programa  ir ao estado 2


estado 1

    2 programa: PROGRAM . identificador $@1 ABREPAR listaidentificadores FECHAPAR PTOVIRG bloco PONTO

    IDENT  deslocar, e ir ao estado 3

    identificador  ir ao estado 4


estado 2

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 5


estado 3

  122 identificador: IDENT .

    $padrão  reduzir usando a regra 122 (identificador)


estado 4

    2 programa: PROGRAM identificador . $@1 ABREPAR listaidentificadores FECHAPAR PTOVIRG bloco PONTO

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


estado 5

    0 $accept: programa $end .

    $padrão  aceitar


estado 6

    2 programa: PROGRAM identificador $@1 . ABREPAR listaidentificadores FECHAPAR PTOVIRG bloco PONTO

    ABREPAR  deslocar, e ir ao estado 7


estado 7

    2 programa: PROGRAM identificador $@1 ABREPAR . listaidentificadores FECHAPAR PTOVIRG bloco PONTO

    IDENT  deslocar, e ir ao estado 3

    listaidentificadores  ir ao estado 8
    identificador         ir ao estado 9


estado 8

    2 programa: PROGRAM identificador $@1 ABREPAR listaidentificadores . FECHAPAR PTOVIRG bloco PONTO
    4 listaidentificadores: listaidentificadores . VIRGULA identificador

    FECHAPAR  deslocar, e ir ao estado 10
    VIRGULA   deslocar, e ir ao estado 11


estado 9

    3 listaidentificadores: identificador .

    $padrão  reduzir usando a regra 3 (listaidentificadores)


estado 10

    2 programa: PROGRAM identificador $@1 ABREPAR listaidentificadores FECHAPAR . PTOVIRG bloco PONTO

    PTOVIRG  deslocar, e ir ao estado 12


estado 11

    4 listaidentificadores: listaidentificadores VIRGULA . identificador

    IDENT  deslocar, e ir ao estado 3

    identificador  ir ao estado 13


estado 12

    2 programa: PROGRAM identificador $@1 ABREPAR listaidentificadores FECHAPAR PTOVIRG . bloco PONTO

    LABEL  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 8 (p_declaracaorotulos)

    bloco                ir ao estado 15
    p_declaracaorotulos  ir ao estado 16


estado 13

    4 listaidentificadores: listaidentificadores VIRGULA identificador .

    $padrão  reduzir usando a regra 4 (listaidentificadores)


estado 14

    9 p_declaracaorotulos: LABEL . listanumeros PTOVIRG

    INTEIRO  deslocar, e ir ao estado 17

    listanumeros  ir ao estado 18
    numero        ir ao estado 19


estado 15

    2 programa: PROGRAM identificador $@1 ABREPAR listaidentificadores FECHAPAR PTOVIRG bloco . PONTO

    PONTO  deslocar, e ir ao estado 20


estado 16

    7 bloco: p_declaracaorotulos . $@2 p_declaracaovariaveis $@3 p_declaracaosubrotinas comandocomposto

    $padrão  reduzir usando a regra 5 ($@2)

    $@2  ir ao estado 21


estado 17

  121 numero: INTEIRO .

    $padrão  reduzir usando a regra 121 (numero)


estado 18

    9 p_declaracaorotulos: LABEL listanumeros . PTOVIRG
   11 listanumeros: listanumeros . VIRGULA numero

    PTOVIRG  deslocar, e ir ao estado 22
    VIRGULA  deslocar, e ir ao estado 23


estado 19

   10 listanumeros: numero .

    $padrão  reduzir usando a regra 10 (listanumeros)


estado 20

    2 programa: PROGRAM identificador $@1 ABREPAR listaidentificadores FECHAPAR PTOVIRG bloco PONTO .

    $padrão  reduzir usando a regra 2 (programa)


estado 21

    7 bloco: p_declaracaorotulos $@2 . p_declaracaovariaveis $@3 p_declaracaosubrotinas comandocomposto

    IDENT  deslocar, e ir ao estado 3
    VAR    deslocar, e ir ao estado 24

    $padrão  reduzir usando a regra 12 (p_declaracaovariaveis)

    listaidentificadores   ir ao estado 25
    p_declaracaovariaveis  ir ao estado 26
    declaracaovariaveis    ir ao estado 27
    identificador          ir ao estado 9


estado 22

    9 p_declaracaorotulos: LABEL listanumeros PTOVIRG .

    $padrão  reduzir usando a regra 9 (p_declaracaorotulos)


estado 23

   11 listanumeros: listanumeros VIRGULA . numero

    INTEIRO  deslocar, e ir ao estado 17

    numero  ir ao estado 28


estado 24

   13 p_declaracaovariaveis: VAR . declaracaovariaveis PTOVIRG

    IDENT  deslocar, e ir ao estado 3

    listaidentificadores  ir ao estado 25
    declaracaovariaveis   ir ao estado 29
    identificador         ir ao estado 9


estado 25
